tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier9UHV-AAAAAAAAAAAAAAAAAAAALg==__MutationsAreGood-AAAAAAAAAAAAAAAAAAAKZA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2660,
  "prerequisites": [
    2636
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Making the Bio Board is pretty much the same process as making a wetware board, just that... oh god that's expensive.\n\nTo make the Ultra Bio Mutated Circuit Board, you just need to etch it with neutronium.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Mutations Are...Good, Right?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2636
  ],
  "rewards": [],
  "tasks": []
}
