tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier9UHV-AAAAAAAAAAAAAAAAAAAALg==__QuantumAnomaly-AAAAAAAAAAAAAAAAAAAByg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 458,
  "prerequisites": [
    2616,
    2761
  ],
  "properties": {
    "auto_claim": false,
    "desc": "All your theoretical knowledge tells you this can't possibly exist. But there it is.\n\nMaybe you can find some use for it?",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Quantum Anomaly",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2616,
    2761
  ],
  "rewards": [],
  "tasks": []
}
